fix scaling on mobile device

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
 }
 
 h1 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: #00ff00;
     margin-bottom: 10px;
 }
@@ -76,7 +76,7 @@ h1 {
 a {
     color: #00ff00;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 0.7rem;
     position: relative;
     font-weight: bold;
 }
